// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<StepInfosGenerales /> should render 1`] = `
.c2 {
  color: #3e486e;
  line-height: 1.25;
  font-size: 1.6rem;
  font-weight: 400;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1.6rem;
  cursor: pointer;
}

.c4 {
  position: relative;
  display: inline-block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: calc(1.6rem * 1.25);
  height: calc(1.6rem * 1.25);
  margin: calc(1.6rem / 5) calc(2 * 1.6rem / 3) 0 0;
  padding: 0;
  line-height: inherit;
  background: #fff;
  border: 1px solid #bbcadf;
  border-radius: 50%;
  box-shadow: none;
  cursor: pointer;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c4:before {
  position: absolute;
  top: 50%;
  left: 50%;
  display: none;
  width: calc(1.6rem / 1.5);
  height: calc(1.6rem / 1.5);
  background-color: #f66663;
  border-radius: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  content: "";
}

.c4:checked {
  background-color: #fff;
  border-color: #f66663;
}

.c4:checked:before {
  display: block;
}

.c0 {
  display: block;
  margin-top: 2rem;
  margin-bottom: 1rem;
  font-size: 1.8rem;
  cursor: default;
}

.c1 {
  font-weight: 600;
}

@media (max-width:600px) {
  .c0 {
    font-size: 1.6rem;
  }
}

<div>
  <form>
    <p
      class="c0"
    >
      <span
        class="c1"
      >
        Quel est le type du contrat de travail ?
      </span>
      <span
        class="c2"
        font-size="default"
        font-weight="400"
      >
         (obligatoire)
      </span>
    </p>
    <label
      class="c3"
      for="contractType-cdd"
    >
      <input
        class="c4"
        id="contractType-cdd"
        name="contractType"
        type="radio"
        value="CDD"
      />
      Contrat à durée déterminée (CDD)
    </label>
    <label
      class="c3"
      for="contractType-ci"
    >
      <input
        class="c4"
        id="contractType-ci"
        name="contractType"
        type="radio"
        value="CTT"
      />
      Contrat de travail temporaire (Contrat d’intérim)
    </label>
    <button
      data-testid="nextBt"
    >
      suivant
    </button>
  </form>
</div>
`;

exports[`<StepInfosGenerales /> should render with CDD 1`] = `
.c2 {
  color: #3e486e;
  line-height: 1.25;
  font-size: 1.6rem;
  font-weight: 400;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1.6rem;
  cursor: pointer;
}

.c4 {
  position: relative;
  display: inline-block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: calc(1.6rem * 1.25);
  height: calc(1.6rem * 1.25);
  margin: calc(1.6rem / 5) calc(2 * 1.6rem / 3) 0 0;
  padding: 0;
  line-height: inherit;
  background: #fff;
  border: 1px solid #bbcadf;
  border-radius: 50%;
  box-shadow: none;
  cursor: pointer;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c4:before {
  position: absolute;
  top: 50%;
  left: 50%;
  display: none;
  width: calc(1.6rem / 1.5);
  height: calc(1.6rem / 1.5);
  background-color: #f66663;
  border-radius: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  content: "";
}

.c4:checked {
  background-color: #fff;
  border-color: #f66663;
}

.c4:checked:before {
  display: block;
}

.c7 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  text-align: center;
}

.c10 {
  position: absolute;
  top: 1.6rem;
  right: 1.6rem;
  width: 1.6rem;
  height: 1.6rem;
  color: #f66663;
  pointer-events: none;
}

.c9 {
  width: 100%;
  height: 5.4rem;
  padding: 0 2rem 0;
  padding-right: 5rem;
  color: #3e486e;
  font-size: 1.6rem;
  font-family: "Open Sans",sans-serif;
  vertical-align: middle;
  background-color: #fff;
  border: none;
  border-radius: 0.6rem;
  box-shadow: 0 1rem 2rem rgba(121,148,212,0.2);
  cursor: pointer;
  -webkit-transition: border-color 250ms ease;
  transition: border-color 250ms ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c9::-ms-expand {
  background-color: transparent;
  border: 0 transparent;
}

.c9 *::-ms-backdrop,
.c9 {
  padding-right: 1.6rem;
}

.c9:invalid {
  border-color: #eb5757;
}

.c9:disabled {
  background-color: #e4e8ef;
}

.c0 {
  display: block;
  margin-top: 2rem;
  margin-bottom: 1rem;
  font-size: 1.8rem;
  cursor: default;
}

.c6 {
  display: block;
  margin-top: 2rem;
  margin-bottom: 1rem;
  font-size: 1.8rem;
  cursor: pointer;
}

.c1 {
  font-weight: 600;
}

.c8 {
  width: 40rem;
}

.c5 {
  margin-bottom: 3.2rem;
}

@media (max-width:600px) {
  .c7 {
    width: 100%;
  }
}

@media (max-width:600px) {
  .c0 {
    font-size: 1.6rem;
  }
}

@media (max-width:600px) {
  .c6 {
    font-size: 1.6rem;
  }
}

@media (max-width:600px) {
  .c8 {
    width: 100%;
  }
}

<div>
  <form>
    <p
      class="c0"
    >
      <span
        class="c1"
      >
        Quel est le type du contrat de travail ?
      </span>
      <span
        class="c2"
        font-size="default"
        font-weight="400"
      >
         (obligatoire)
      </span>
    </p>
    <label
      class="c3"
      for="contractType-cdd"
    >
      <input
        checked=""
        class="c4"
        id="contractType-cdd"
        name="contractType"
        type="radio"
        value="CDD"
      />
      Contrat à durée déterminée (CDD)
    </label>
    <label
      class="c3"
      for="contractType-ci"
    >
      <input
        class="c4"
        id="contractType-ci"
        name="contractType"
        type="radio"
        value="CTT"
      />
      Contrat de travail temporaire (Contrat d’intérim)
    </label>
    <div
      class="c5"
    >
      <label
        class="c6"
        for="input-criteria.cddType"
      >
        <span
          class="c1"
        >
          Quel est le type de CDD ?
        </span>
        <span
          class="c2"
          font-size="default"
          font-weight="400"
        >
           (obligatoire)
        </span>
      </label>
      <div
        class="c7 c8"
      >
        <select
          class="c9"
          id="input-criteria.cddType"
          name="criteria.cddType"
        >
          <option
            disabled=""
            value=""
          >
            ...
          </option>
          <option
            value="CDD saisonnier"
          >
            CDD saisonnier
          </option>
          <option
            value="CDD d'usage"
          >
            CDD d'usage
          </option>
          <option
            value="CDD conclu avec un jeune (mineur ou majeur) pendant ses vacances scolaires ou universitaires"
          >
            CDD conclu avec un jeune (mineur ou majeur) pendant ses vacances scolaires ou universitaires
          </option>
          <option
            value="CCD dans le cadre d’un congé de mobilité"
          >
            CCD dans le cadre d’un congé de mobilité
          </option>
          <option
            value="Contrat unique d’insertion (CUI) ou Parcours emploi compétences (PEC)"
          >
            Contrat unique d’insertion (CUI) ou Parcours emploi compétences (PEC)
          </option>
          <option
            value="Contrat de professionnalisation ou Contrat d’apprentissage"
          >
            Contrat de professionnalisation ou Contrat d’apprentissage
          </option>
          <option
            value="Contrat pour lequel l’employeur s’est engagé à assurer un complément de formation professionnelle au salarié"
          >
            Contrat pour lequel l’employeur s’est engagé à assurer un complément de formation professionnelle au salarié
          </option>
          <option
            value="Autres"
          >
            Autres
          </option>
        </select>
        <div
          aria-hidden="true"
          class="c10"
        >
          <svg
            aria-hidden="true"
            fill="none"
            viewBox="0 0 16 16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              clip-path="url(#arrow-down_svg__clip0)"
            >
              <path
                d="M8.425 11.573l7.11-6.072a.709.709 0 00.26-.537.709.709 0 00-.26-.537.973.973 0 00-.629-.223.973.973 0 00-.63.223l-6.48 5.536-6.481-5.536a.973.973 0 00-.63-.223.973.973 0 00-.628.223.708.708 0 00-.261.537c0 .202.094.395.26.537l7.11 6.072a.91.91 0 00.29.165 1.021 1.021 0 00.68 0 .91.91 0 00.29-.165z"
                fill="currentColor"
              />
            </g>
            <defs>
              <clippath
                id="arrow-down_svg__clip0"
              >
                <path
                  d="M0 0h16v16H0z"
                  fill="currentColor"
                />
              </clippath>
            </defs>
          </svg>
        </div>
      </div>
    </div>
    <button
      data-testid="nextBt"
    >
      suivant
    </button>
  </form>
</div>
`;

exports[`<StepInfosGenerales /> should render with CDD and not handled ccn 1`] = `
.c2 {
  color: #3e486e;
  line-height: 1.25;
  font-size: 1.6rem;
  font-weight: 400;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1.6rem;
  cursor: pointer;
}

.c4 {
  position: relative;
  display: inline-block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: calc(1.6rem * 1.25);
  height: calc(1.6rem * 1.25);
  margin: calc(1.6rem / 5) calc(2 * 1.6rem / 3) 0 0;
  padding: 0;
  line-height: inherit;
  background: #fff;
  border: 1px solid #bbcadf;
  border-radius: 50%;
  box-shadow: none;
  cursor: pointer;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c4:before {
  position: absolute;
  top: 50%;
  left: 50%;
  display: none;
  width: calc(1.6rem / 1.5);
  height: calc(1.6rem / 1.5);
  background-color: #f66663;
  border-radius: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  content: "";
}

.c4:checked {
  background-color: #fff;
  border-color: #f66663;
}

.c4:checked:before {
  display: block;
}

.c7 {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  text-align: center;
}

.c10 {
  position: absolute;
  top: 1.6rem;
  right: 1.6rem;
  width: 1.6rem;
  height: 1.6rem;
  color: #f66663;
  pointer-events: none;
}

.c9 {
  width: 100%;
  height: 5.4rem;
  padding: 0 2rem 0;
  padding-right: 5rem;
  color: #3e486e;
  font-size: 1.6rem;
  font-family: "Open Sans",sans-serif;
  vertical-align: middle;
  background-color: #fff;
  border: none;
  border-radius: 0.6rem;
  box-shadow: 0 1rem 2rem rgba(121,148,212,0.2);
  cursor: pointer;
  -webkit-transition: border-color 250ms ease;
  transition: border-color 250ms ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c9::-ms-expand {
  background-color: transparent;
  border: 0 transparent;
}

.c9 *::-ms-backdrop,
.c9 {
  padding-right: 1.6rem;
}

.c9:invalid {
  border-color: #eb5757;
}

.c9:disabled {
  background-color: #e4e8ef;
}

.c0 {
  display: block;
  margin-top: 2rem;
  margin-bottom: 1rem;
  font-size: 1.8rem;
  cursor: default;
}

.c6 {
  display: block;
  margin-top: 2rem;
  margin-bottom: 1rem;
  font-size: 1.8rem;
  cursor: pointer;
}

.c1 {
  font-weight: 600;
}

.c8 {
  width: 40rem;
}

.c5 {
  margin-bottom: 3.2rem;
}

@media (max-width:600px) {
  .c7 {
    width: 100%;
  }
}

@media (max-width:600px) {
  .c0 {
    font-size: 1.6rem;
  }
}

@media (max-width:600px) {
  .c6 {
    font-size: 1.6rem;
  }
}

@media (max-width:600px) {
  .c8 {
    width: 100%;
  }
}

<div>
  <form>
    <p
      class="c0"
    >
      <span
        class="c1"
      >
        Quel est le type du contrat de travail ?
      </span>
      <span
        class="c2"
        font-size="default"
        font-weight="400"
      >
         (obligatoire)
      </span>
    </p>
    <label
      class="c3"
      for="contractType-cdd"
    >
      <input
        checked=""
        class="c4"
        id="contractType-cdd"
        name="contractType"
        type="radio"
        value="CDD"
      />
      Contrat à durée déterminée (CDD)
    </label>
    <label
      class="c3"
      for="contractType-ci"
    >
      <input
        class="c4"
        id="contractType-ci"
        name="contractType"
        type="radio"
        value="CTT"
      />
      Contrat de travail temporaire (Contrat d’intérim)
    </label>
    <div
      class="c5"
    >
      <label
        class="c6"
        for="input-criteria.cddType"
      >
        <span
          class="c1"
        >
          Quel est le type de CDD ?
        </span>
        <span
          class="c2"
          font-size="default"
          font-weight="400"
        >
           (obligatoire)
        </span>
      </label>
      <div
        class="c7 c8"
      >
        <select
          class="c9"
          id="input-criteria.cddType"
          name="criteria.cddType"
        >
          <option
            disabled=""
            value=""
          >
            ...
          </option>
          <option
            value="CDD saisonnier"
          >
            CDD saisonnier
          </option>
          <option
            value="CDD d'usage"
          >
            CDD d'usage
          </option>
          <option
            value="CDD conclu avec un jeune (mineur ou majeur) pendant ses vacances scolaires ou universitaires"
          >
            CDD conclu avec un jeune (mineur ou majeur) pendant ses vacances scolaires ou universitaires
          </option>
          <option
            value="CCD dans le cadre d’un congé de mobilité"
          >
            CCD dans le cadre d’un congé de mobilité
          </option>
          <option
            value="Contrat unique d’insertion (CUI) ou Parcours emploi compétences (PEC)"
          >
            Contrat unique d’insertion (CUI) ou Parcours emploi compétences (PEC)
          </option>
          <option
            value="Contrat de professionnalisation ou Contrat d’apprentissage"
          >
            Contrat de professionnalisation ou Contrat d’apprentissage
          </option>
          <option
            value="Contrat pour lequel l’employeur s’est engagé à assurer un complément de formation professionnelle au salarié"
          >
            Contrat pour lequel l’employeur s’est engagé à assurer un complément de formation professionnelle au salarié
          </option>
          <option
            value="Autres"
          >
            Autres
          </option>
        </select>
        <div
          aria-hidden="true"
          class="c10"
        >
          <svg
            aria-hidden="true"
            fill="none"
            viewBox="0 0 16 16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              clip-path="url(#arrow-down_svg__clip0)"
            >
              <path
                d="M8.425 11.573l7.11-6.072a.709.709 0 00.26-.537.709.709 0 00-.26-.537.973.973 0 00-.629-.223.973.973 0 00-.63.223l-6.48 5.536-6.481-5.536a.973.973 0 00-.63-.223.973.973 0 00-.628.223.708.708 0 00-.261.537c0 .202.094.395.26.537l7.11 6.072a.91.91 0 00.29.165 1.021 1.021 0 00.68 0 .91.91 0 00.29-.165z"
                fill="currentColor"
              />
            </g>
            <defs>
              <clippath
                id="arrow-down_svg__clip0"
              >
                <path
                  d="M0 0h16v16H0z"
                  fill="currentColor"
                />
              </clippath>
            </defs>
          </svg>
        </div>
      </div>
    </div>
    <button
      data-testid="nextBt"
    >
      suivant
    </button>
  </form>
</div>
`;

exports[`<StepInfosGenerales /> should render with CTT 1`] = `
.c2 {
  color: #3e486e;
  line-height: 1.25;
  font-size: 1.6rem;
  font-weight: 400;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1.6rem;
  cursor: pointer;
}

.c4 {
  position: relative;
  display: inline-block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: calc(1.6rem * 1.25);
  height: calc(1.6rem * 1.25);
  margin: calc(1.6rem / 5) calc(2 * 1.6rem / 3) 0 0;
  padding: 0;
  line-height: inherit;
  background: #fff;
  border: 1px solid #bbcadf;
  border-radius: 50%;
  box-shadow: none;
  cursor: pointer;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}

.c4:before {
  position: absolute;
  top: 50%;
  left: 50%;
  display: none;
  width: calc(1.6rem / 1.5);
  height: calc(1.6rem / 1.5);
  background-color: #f66663;
  border-radius: 50%;
  -webkit-transform: translate(-50%,-50%);
  -ms-transform: translate(-50%,-50%);
  transform: translate(-50%,-50%);
  content: "";
}

.c4:checked {
  background-color: #fff;
  border-color: #f66663;
}

.c4:checked:before {
  display: block;
}

.c0 {
  display: block;
  margin-top: 2rem;
  margin-bottom: 1rem;
  font-size: 1.8rem;
  cursor: default;
}

.c1 {
  font-weight: 600;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-bottom: 2rem;
}

@media (max-width:600px) {
  .c0 {
    font-size: 1.6rem;
  }
}

<div>
  <form>
    <p
      class="c0"
    >
      <span
        class="c1"
      >
        Quel est le type du contrat de travail ?
      </span>
      <span
        class="c2"
        font-size="default"
        font-weight="400"
      >
         (obligatoire)
      </span>
    </p>
    <label
      class="c3"
      for="contractType-cdd"
    >
      <input
        class="c4"
        id="contractType-cdd"
        name="contractType"
        type="radio"
        value="CDD"
      />
      Contrat à durée déterminée (CDD)
    </label>
    <label
      class="c3"
      for="contractType-ci"
    >
      <input
        checked=""
        class="c4"
        id="contractType-ci"
        name="contractType"
        type="radio"
        value="CTT"
      />
      Contrat de travail temporaire (Contrat d’intérim)
    </label>
    <p
      class="c0"
    >
      <span
        class="c1"
      >
        S’agit-il d’un contrat de mission-formation ?
      </span>
      <span
        class="c2"
        font-size="default"
        font-weight="400"
      >
         (obligatoire)
      </span>
    </p>
    <div
      class="c5"
      data-testid="cttFormation"
    >
      <label
        class="c3"
        for="cttFormation-oui"
      >
        <input
          class="c4"
          id="cttFormation-oui"
          name="cttFormation"
          type="radio"
          value="true"
        />
        Oui
      </label>
      <label
        class="c3"
        for="cttFormation-non"
      >
        <input
          class="c4"
          id="cttFormation-non"
          name="cttFormation"
          type="radio"
          value="false"
        />
        Non
      </label>
    </div>
    <p
      class="c0"
    >
      <span
        class="c1"
      >
        Le contrat d'intérim a-t-il été rompu avant la fin prévue pour une des raisons suivantes : la propre initiative du salarié, la faute grave du salarié, cas de force majeure ?
      </span>
      <span
        class="c2"
        font-size="default"
        font-weight="400"
      >
         (obligatoire)
      </span>
    </p>
    <div
      class="c5"
      data-testid="ruptureContratFauteGrave"
    >
      <label
        class="c3"
        for="ruptureContratFauteGrave-oui"
      >
        <input
          class="c4"
          id="ruptureContratFauteGrave-oui"
          name="ruptureContratFauteGrave"
          type="radio"
          value="true"
        />
        Oui
      </label>
      <label
        class="c3"
        for="ruptureContratFauteGrave-non"
      >
        <input
          class="c4"
          id="ruptureContratFauteGrave-non"
          name="ruptureContratFauteGrave"
          type="radio"
          value="false"
        />
        Non
      </label>
    </div>
    <p
      class="c0"
    >
      <span
        class="c1"
      >
        À la fin du contrat d'intérim, le salarié a-t-il été immédiatement embauché en CDI au sein de l'entreprise dans laquelle il effectuait sa mission ?
      </span>
      <span
        class="c2"
        font-size="default"
        font-weight="400"
      >
         (obligatoire)
      </span>
    </p>
    <div
      class="c5"
      data-testid="propositionCDIFinContrat"
    >
      <label
        class="c3"
        for="propositionCDIFinContrat-oui"
      >
        <input
          class="c4"
          id="propositionCDIFinContrat-oui"
          name="propositionCDIFinContrat"
          type="radio"
          value="true"
        />
        Oui
      </label>
      <label
        class="c3"
        for="propositionCDIFinContrat-non"
      >
        <input
          class="c4"
          id="propositionCDIFinContrat-non"
          name="propositionCDIFinContrat"
          type="radio"
          value="false"
        />
        Non
      </label>
    </div>
    <p
      class="c0"
    >
      <span
        class="c1"
      >
        Le salarié a-t-il refusé la mise en œuvre de la souplesse prévue dans le contrat d’intérim ?
      </span>
      <span
        class="c2"
        font-size="default"
        font-weight="400"
      >
         (obligatoire)
      </span>
    </p>
    <div
      class="c5"
      data-testid="refusSouplesse"
    >
      <label
        class="c3"
        for="refusSouplesse-oui"
      >
        <input
          class="c4"
          id="refusSouplesse-oui"
          name="refusSouplesse"
          type="radio"
          value="true"
        />
        Oui
      </label>
      <label
        class="c3"
        for="refusSouplesse-non"
      >
        <input
          class="c4"
          id="refusSouplesse-non"
          name="refusSouplesse"
          type="radio"
          value="false"
        />
        Non
      </label>
    </div>
    <button
      data-testid="nextBt"
    >
      suivant
    </button>
  </form>
</div>
`;
